--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # change the followings to match your Github username and repo name
-baseurl: "/wip-saida" # the name of your github repo
+baseurl: "/saida" # the name of your github repo
 url: "https://BCDigSchol.github.io" # the url of your github pages
 
 # site information used in page title, meta data etc.
